# CleanSweep

./: .codecov.yml  LICENSE  README.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
UML/cpplint_clang_tidy_outputs/: clang-tidy_output  cpplint_output
cleansweep/: CMakeLists.txt  compile_commands.json  package.xml
cleansweep/.cache/clangd/index/: main.cpp.230A60DF01C37EC0.idx  object_detection_test.cpp.1B5C5EB800AAAEE6.idx  object_detector.cpp.65CBE2B7322B4AC8.idx  object_detector.hpp.D44FABFA150EB3FD.idx  walker_bot.hpp.8C21B76CD965210F.idx
cleansweep/include/cleansweep/: object_detection.hpp  object_detector.hpp  obstacle_avoidance.hpp  turtlebot.hpp  walker_bot.hpp
cleansweep/launch/: walker_launch.py
cleansweep/src/: main.cpp  object_detection.cpp  object_detector.cpp  obstacle_avoidance.cpp  turtlebot.cpp  walker_bot.cpp
cleansweep/test/: main.cpp  object_detection_test.cpp  obstacle_avoidance_test.cpp  turtlebot_test.cpp  walker_bot_test.cpp
cleansweep/worlds/: empty_can.world  empty_can_angle.world  warehouse_maze.world
src/cleansweep/: CMakeLists.txt  compile_commands.json
src/cleansweep/.cache/clangd/index/: main.cpp.0ABD5734B4A0BF3C.idx  main.cpp.6B3C94B58135147B.idx  main.cpp.A3CDCEEA8E9FA1E0.idx  object_detection_test.cpp.08EC37FB5D908EDC.idx  object_detector.cpp.DE73DC517B7AFCF9.idx  object_detector.hpp.AB3E858D97F810E6.idx  walker_bot.cpp.581296A04D38DBB6.idx  walker_bot.cpp.E2CF86793BAADEFB.idx  walker_bot.hpp.40F14563240FDD28.idx  walker_bot_test.cpp.C6E35EC4F648FFFF.idx  walker_bot_test.cpp.D5081036C40AF51C.idx
src/cleansweep/include/cleansweep/: object_detector.hpp  walker_bot.hpp
src/cleansweep/launch/: walker_launch.py
src/cleansweep/src/: main.cpp  object_detector.cpp  walker_bot.cpp
src/cleansweep/test/: main.cpp  object_detection_test.cpp  walker_bot_test.cpp
src/cleansweep/worlds/: empty_warehouse.world
